# focus-renderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CompileShaders.bat  LICENSE  README.en.md  README.md
Asset/Models/: cube.mtl  defaultPlane.mtl  defaultPlaneW.mtl  dragon.mtl  plane.mtl  sphere.mtl  teapot.mtl
Engine/: CMakeLists.txt
Engine/Function/: engine.ixx
Engine/Platform/Interface/: Context.h  Device.h  Instance.h  InterfaceConfig.h  InterfaceType.h  PhysicalDevice.h
Engine/Platform/Interface/Direct3D12/: Instance.cpp
Engine/Platform/Interface/Vulkan/: Instance.cpp  InterfaceType.h  PhysicalDevice.cpp
Engine/Platform/RenderHardwareInterface/: CommandQueue.h  Context.h  Device.h  Fence.h  Instance.h  InterfaceType.h  PhysicalDevice.h  Surface.h  SwapChain.h
Engine/Platform/RenderHardwareInterface/Vulkan/: Instance.cpp
Engine/Platform/vulkan_legacy/implement/: VulkanCommandBuffer_Impl.ixx  VulkanImageView_Impl.ixx
Engine/Platform/vulkan_legacy/interface/: VulkanBuffer.ixx  VulkanCommandBuffer.ixx  VulkanContext.ixx  VulkanImageView.ixx  VulkanSwapChain.ixx
Example/: CMakeLists.txt
Example/simple/: debug.cpp  export.cpp  main.cpp
Example/vulkan_legacy/implement/: VulkanContext_Impl.ixx
Platform/: CMakeLists.txt  WindowContext.ixx
Platform/Interface/: Context.h  Device.h
Platform/Interface/Direct3D12/: Instance.cpp
Platform/Interface/Vulkan/: PhysicalDevice.cpp
Platform/NativeSurface/: WindowsSurface.ixx
Shaders/: CMakeLists.txt  blinnPhong.fragment  blinnPhong.vertex  blinnPhongFragment.spv  blinnPhongVertex.spv  geometryVertex.spv
Shaders/Chunks/: shadowShading.glsl  taa.glsl  tonemapping.glsl  vkfilp.glsl
Shaders/Deffered/: gbuffer.fragment  gbuffer.vertex  gbufferCube.fragment  gbufferCube.vertex  gbufferCubeFragment.spv  gbufferCubeVertex.spv  gbufferFragment.spv  gbufferVertex.spv  motionVectors.fragment  motionVectors.vertex  normal.fragment  normal.vertex  normalFragment.spv  normalVertex.spv
Shaders/IBL/: brdflut.fragment  brdflutFragment.spv  irradianceCube.fragment  irradianceCubeFragment.spv  irradianceMap.fragment  irradianceMapFragment.spv  prefilterCube.vertex  prefilterCubeVertex.spv  prefilterEnvmap.fragment  prefilterEnvmapFragment.spv
Shaders/Materials/: blinnPhong.fragment  blinnPhong.vertex  blinnPhongFragment.spv  blinnPhongVertex.spv  environmentCube.fragment  environmentCube.vertex  environmentCubeFragment.spv  environmentCubeVertex.spv  environmentMap.fragment  environmentMap.vertex  environmentMapFragment.spv  environmentMapVertex.spv  geometry.fragment  geometry.vertex  geometryVertex.spv  physicalMaterial.fragment  physicalMaterial.vertex  physicalMaterialFragment.spv  physicalMaterialVertex.spv
Shaders/Materials/Environment/: environmentCube.fragment  environmentCube.vertex  environmentCubeDefferedFragment.spv  environmentCubeFragment.spv  environmentMapVertex.spv
Shaders/PostEffect/: motionVectors.fragment
Shaders/Shadow/: shadowMapVertex.spv
Sources/: CMakeLists.txt  Engine.h  GlobalContext.cpp  GlobalContext.h  engine.ixx
Sources/Core/: Math.cpp  Math.h  Path.h  Thread.h
Sources/Editor/: Overlay.cpp  Overlay.h
Sources/Function/: GlobalContext.h  NativeWindow.h  NativeWindow.ixx  engine.ixx
Sources/Function/GlobalContext/: GlobalContext.ixx
Sources/Function/IO/: KeyCallback.h  MouseCallback.h  WindowCallback.h
Sources/Function/IO/Loader/: ModelLoader.h  ObjLoader.h
Sources/Function/NativeSurface/: NativeSurface.ixx  WindowsSurface.ixx
Sources/Function/Render/: BlinnPhongMaterial.h  DefferedPipeline.h  DirectionalLight.h  Mesh.cpp  Mesh.h  MeshVertex.h  Overlay.cpp  Overlay.h  PBRPipeline.h  Pipeline.h  PointLight.h  RenderCamera.cpp  RenderCamera.h  RenderPipeline.cpp  RenderPipeline.h  RenderResource.cpp  RenderResource.h  RenderResources.h  RenderScene.cpp  RenderScene.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Renderer.ixx  ShadowMap.cpp  ShadowMap.h  SkyCube.h  SkySphere.h  Texture.cpp  Texture.h
Sources/Function/Render/Geometry/: Box.h  Mesh.cpp  Mesh.h  MeshVertex.h  Model.h  Sphere.h
Sources/Function/Render/Materials/: BasicMaterial.h  BlinnPhongMaterial.h  EnvironmentCube.h  EnvironmentMap.h  GeometryMaterial.h  Material.h  MaterialManager.cpp  MaterialManager.h  PhysicalMaterial.h
Sources/Function/Render/PostEffect/: PostEffectPipeline.h
Sources/Function/Render/RayTracing/: utils.h
Sources/Function/Render/RenderPasses/: MainPass.cpp  MainPass.h  RenderPass.h
Sources/Platform/: NativeWindow.cpp  NativeWindow.h  WindowSystem.cpp  WindowSystem.h
engine/: CMakeLists.txt
engine/Resource/modelLoader/: ObjLoader.ixx
engine/function/: engine.ixx  interfaces.ixx
engine/function/render/mesh/: MeshData.ixx
engine/platform/: rhi.ixx  vulkan_rhi.ixx  window_context.ixx
engine/platform/vulkan/implement/: VulkanCommandBuffer_Impl.ixx  VulkanContext_Impl.ixx  VulkanRHI_Impl.ixx  VulkanSwapChain_Impl.ixx  vulkan_rhi_impl.ixx
engine/platform/vulkan/interface/: VulkanBuffer.ixx  VulkanCommandBuffer.ixx  VulkanContext.ixx  VulkanMemory.ixx  VulkanQueueFamilyIndices.ixx  VulkanRHI.ixx  VulkanSwapChain.ixx
engine/platform/vulkan/interfaces/: vulkan_rhi.ixx
engine/source/editor/: CMakeLists.txt
engine/source/editor/source/: main.cpp
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.ixx
engine/source/runtime/function/context/: runtime_context.cpp  runtime_context.ixx
engine/source/runtime/function/render/: render_system.cpp  render_system.ixx  window_system.ixx
engine/source/runtime/function/render/rhi/: rhi.ixx
engine/source/runtime/function/render/rhi/vulkan_rhi/: vulkan_rhi.cpp  vulkan_rhi.ixx
engine/source/runtime/tool/context/: runtime_context.cpp  runtime_context.ixx
engine/source/runtime/tool/global/: context.cpp  context.ixx
engine/source/runtime/tool/render/: render_system.cpp  render_system.ixx  window_system.cpp  window_system.ixx
example/: CMakeLists.txt
example/simple/: main.cpp
